--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "dung204",
   "license": "UNLICENSED",
   "scripts": {
-    "build": "nest build",
+    "build": "nest build && cp -r src/base/database/scripts/ dist/base/database/scripts/",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "cross-env NODE_ENV=development nest start --watch",
@@ -37,6 +37,7 @@
     "dotenv": "^16.5.0",
     "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
+    "lorem-ipsum": "^2.0.8",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "pg": "^8.15.6",
