--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,14 @@ REDIS_HOST=<string | localhost>
 REDIS_PORT=<number | 6379>
 REDIS_USERNAME=<string>
 REDIS_PASSWORD=<string>
+
+# Momo payment configuration (sandbox environment)
+MOMO_PARTNER_CODE=MOMO
+MOMO_ACCESS_KEY=F8BBA842ECF85
+MOMO_SECRET_KEY=K951B6PE1waDMi640xX08PD3vg6EkVlz
+MOMO_REDIRECT_URL=https://momo.vn/return
+
+# For IPN URL, use the ngrok URL or the URL provided by the dev tunnel
+MOMO_IPN_URL=https://xg31jk8f-3000.asse.devtunnels.ms/api/v1/transaction/notify/momo
+
+MOMO_EXPIRE_TIME_MINUTES=30
