--- a/.env.example
+++ b/.env.example
@@ -29,3 +29,14 @@ MOMO_REDIRECT_URL=https://momo.vn/return
 MOMO_IPN_URL=https://xg31jk8f-3000.asse.devtunnels.ms/api/v1/transaction/notify/momo
 
 MOMO_EXPIRE_TIME_MINUTES=30
+
+EMAIL_HOST=<string>
+EMAIL_PORT=<number | 587>
+EMAIL_AUTH_USER=<email>
+EMAIL_AUTH_PASSWORD=<string>
+
+OTP_SECRET_KEY=<string>
+
+# Stringee configuration
+STRINGEE_SID_KEY=<string>
+STRINGEE_SECRET_KEY=<string>
