--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "dung204",
   "license": "UNLICENSED",
   "scripts": {
-    "build": "nest build && cp -r src/base/database/scripts/ dist/base/database/scripts/",
+    "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "cross-env NODE_ENV=development nest start --watch",
@@ -23,6 +23,7 @@
     "prepare": "node .husky/install.mjs"
   },
   "dependencies": {
+    "@nestjs-modules/mailer": "^2.0.2",
     "@nestjs/axios": "^4.0.0",
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
@@ -37,9 +38,12 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "dotenv": "^16.5.0",
+    "ejs": "^3.1.10",
     "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
     "lorem-ipsum": "^2.0.8",
+    "nodemailer": "^7.0.3",
+    "otplib": "^12.0.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "pg": "^8.15.6",
@@ -65,6 +69,7 @@
     "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.10.7",
+    "@types/nodemailer": "^6.4.17",
     "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^6.0.2",
     "cross-env": "^7.0.3",
