--- a/.env.example
+++ b/.env.example
@@ -37,6 +37,6 @@ EMAIL_AUTH_PASSWORD=<string>
 
 OTP_SECRET_KEY=<string>
 
-# Stringee configuration
-STRINGEE_SID_KEY=<string>
-STRINGEE_SECRET_KEY=<string>
+CLOUDINARY_CLOUD_NAME=<your-cloudinary-cloud-name>
+CLOUDINARY_API_KEY=<your-cloudinary-api-key>
+CLOUDINARY_API_SECRET=<your-cloudinary-api-secret>
