feat: google auth

--- a/.env.example
+++ b/.env.example
@@ -39,3 +39,7 @@ OTP_SECRET_KEY=<string>
 CLOUDINARY_CLOUD_NAME=<your-cloudinary-cloud-name>
 CLOUDINARY_API_KEY=<your-cloudinary-api-key>
 CLOUDINARY_API_SECRET=<your-cloudinary-api-secret>
+
+GOOGLE_OAUTH_CLIENT_ID=<your-google-oauth-client-id>
+GOOGLE_OAUTH_CLIENT_SECRET=<your-google-oauth-client-secret>
+GOOGLE_OAUTH_REDIRECT_URI=<your-google-oauth-redirect-uri>
