--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,5 @@
 # Server (app) configuration
 APP_PORT=<number | 3000>
-USE_HTTPS=<true | false>
 
 # JWT configuration
 ACCESS_SECRET_KEY=<string>
@@ -43,3 +42,14 @@ CLOUDINARY_API_SECRET=<your-cloudinary-api-secret>
 GOOGLE_OAUTH_CLIENT_ID=<your-google-oauth-client-id>
 GOOGLE_OAUTH_CLIENT_SECRET=<your-google-oauth-client-secret>
 GOOGLE_OAUTH_REDIRECT_URI=<your-google-oauth-redirect-uri>
+
+MINIO_ENDPOINT=<string | localhost>
+MINIO_PORT=<number | 9000>
+MINIO_ACCESS_KEY=<string>
+MINIO_SECRET_KEY=<string>
+MINIO_BUCKET=<string>
+MINIO_REGION=<string>
+MINIO_PUBLIC_ENDPOINT=<string>
+STORAGE_PROVIDER=<string>
+MINIO_EXPIRY_SECONDS=<number>
+MINIO_FIXED_EXPIRY_SECONDS=<number>
