--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
     "lorem-ipsum": "^2.0.8",
+    "minio": "^8.0.5",
     "nodemailer": "^7.0.3",
     "otplib": "^12.0.1",
     "passport": "^0.7.0",
