fix: extend gzip types to include images, videos, and audio files

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -64,7 +64,7 @@ server {
 
   # Enable gzip compression
   gzip on;
-  gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
+  gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript image/* video/* audio/*;
   gzip_min_length 1000;
   gzip_comp_level 6;
 }
@@ -103,7 +103,7 @@ server {
 
   # Enable gzip compression
   gzip on;
-  gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
+  gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript image/* video/* audio/*;
   gzip_min_length 1000;
   gzip_comp_level 6;
-  };
+}
