--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -2,7 +2,7 @@ server {
   listen 443 ssl;
   listen [::]:443 ssl;
 
-  server_name maihome.info.vn;
+  server_name api.maihome.info.vn;
 
   ssl_certificate /etc/certs/cert.pem;
   ssl_certificate_key /etc/certs/key.pem;
