--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
-    "cloudinary": "^2.6.1",
     "dotenv": "^16.5.0",
     "ejs": "^3.1.10",
     "ioredis": "^5.6.1",
@@ -51,6 +50,7 @@
     "pg": "^8.15.6",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "sharp": "^0.34.2",
     "typeorm": "^0.3.22",
     "typeorm-naming-strategies": "^4.1.0",
     "typeorm-transactional": "^0.5.0"
