--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
     "noImplicitAny": true,
     "strictBindCallApply": true,
     "noFallthroughCasesInSwitch": true,
+    "esModuleInterop": true,
 
     "paths": {
       "@/*": ["./src/*"],
